<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quickstorephilippinesandroidapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.quickstorephilippinesandroidapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.quickstorephilippinesandroidapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!-- Admin Fragment -->
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.quickstorephilippinesandroidapp.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin">
        <action
            android:id="@+id/action_admin_to_panel"
            app:destination="@+id/nav_admin_panel" />
    </fragment>

    <!-- Admin Panel Fragment -->
    <fragment
        android:id="@+id/nav_admin_panel"
        android:name="com.example.quickstorephilippinesandroidapp.ui.admin.AdminPanelFragment"
        android:label="Admin Panel"
        tools:layout="@layout/fragment_admin_panel" />

</navigation>